--- a/index.html
+++ b/index.html
@@ -134,14 +134,12 @@
       participants.</p>
   </section>
 
-  <section>
-    <div class="content__banner">
-      <div class="content__banner__text bg-white p-3">
+  <section class="recommend__banner">
+      <div class="recommend__banner__text bg-white p-3">
         <h4 class="h6 h5-md h4-xl fomt-weight-bold mb-3">“I like to ride. Fixed gear. No brakes.<br>Can’t stop. Don’t want to,
           either.”</h4>
         <p class="text-secondary mb-0">Premium Rush (2012)</p>
       </div>
-    </div>
   </section>
 
   <section class="article container">
