--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
   </nav>
 
   <!-- content -->
-  <section>
-    <div class="row no-gutters position-relative">
+  <section class="row no-gutters position-relative overflow-hidden">
       <div class="collection__item col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-right"
         data-aos-delay="400">
         <div class="collection__text">
@@ -67,10 +66,9 @@
           <h3 class="h5 h4-md h3-xl mb-0">Collection 001-xx</h3>
         </nav>
       </div>
-    </div>
   </section>
 
-  <section class="onegear mb-4 mb-lg-0">
+  <section class="onegear overflow-hidden mb-4 mb-lg-0">
     <div class="row no-gutters">
       <div class="col-lg-6" data-aos="fade-right" data-aos-delay="400">
         <div class="onegear__img position-relative">
@@ -98,7 +96,7 @@
     </div>
   </section>
 
-  <section class="stripped">
+  <section class="stripped overflow-hidden">
     <div class="row no-gutters flex-column-reverse  flex-lg-row">
       <div class="stripped__item col-lg-6 bg-lg-light d-flex flex-column flex-column-reverse justify-content-between"
         data-aos="fade-right">
@@ -127,7 +125,7 @@
       </div>
   </section>
 
-  <section class="commuters text-center" data-aos="fade-up" data-aos-delay="400">
+  <section class="commuters text-center overflow-hidden" data-aos="fade-up" data-aos-delay="400">
     <h3 class="h5 h3-md font-weight-bold mb-4">A collection built for<br>regular commuters</h3>
     <p class="text-secondary">Riders unknown to each other commonly greet each other when on
       bikes. As in<br>many subcultures, this feeling of belonging is a key factor in recruiting and<br>retaining
