--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item ml-lg-5">
-          <a class="nav-link h4 font-weight-bold text-center hover-skew-right hover-underline-left pb-1" href="#">Product</a>
+          <a class="nav-link h4 font-weight-bold text-center hover-skew-right hover-underline-left pb-1"
+            href="#">Product</a>
         </li>
         <li class="nav-item ml-lg-5">
-          <a class="nav-link h4 font-weight-bold text-center hover-skew-right hover-underline-left pb-1" href="#">Blog</a>
+          <a class="nav-link h4 font-weight-bold text-center hover-skew-right hover-underline-left pb-1"
+            href="#">Blog</a>
         </li>
         <li class="nav-item ml-lg-5">
-          <a class="nav-link h4 font-weight-bold text-center hover-skew-right hover-underline-left pb-1" href="#">contact</a>
+          <a class="nav-link h4 font-weight-bold text-center hover-skew-right hover-underline-left pb-1"
+            href="#">contact</a>
         </li>
       </ul>
     </div>
@@ -39,39 +42,39 @@
 
   <!-- content -->
   <section class="row no-gutters position-relative overflow-hidden">
-      <div class="collection__item col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-right"
-        data-aos-delay="400">
-        <div class="collection__text">
-          <h2 class="h3 h1-xl text-white text-lg-primary mb-5">Single Speed,<br> Single Life.</h2>
-          <p class="d-none d-md-block text-white text-lg-secondary h4 font-weight-normal mb-5">More recently the “fixie”
-            has become a
-            popular<br>alternative among mainly urban cyclists, offering the<br>advantage of simplicity compared with
-            the standard<br>multi-geared bicycle.</p>
-          <a href="#" class="btn btn-outline-light btn-outline-lg-dark h6 h4-md font-weight-bold mb-0">Shop Now</a>
-        </div>
+    <div class="collection__item col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-right"
+      data-aos-delay="400">
+      <div class="collection__text">
+        <h2 class="h3 h1-xl text-white text-lg-primary mb-5">Single Speed,<br> Single Life.</h2>
+        <p class="d-none d-md-block text-white text-lg-secondary h4 font-weight-normal mb-5">More recently the “fixie”
+          has become a
+          popular<br>alternative among mainly urban cyclists, offering the<br>advantage of simplicity compared with
+          the standard<br>multi-geared bicycle.</p>
+        <a href="#" class="btn btn-outline-light btn-outline-lg-dark h6 h4-md font-weight-bold mb-0">Shop Now</a>
       </div>
-      <div class="col-lg-6 bg-dark" data-aos="fade-left" data-aos-delay="400">
-        <div class="collection__img" data-aos="fade-left" data-aos-delay="800"></div>
-        <nav class="bg-white d-flex align-items-center border-bottom">
-          <ul class="pagination justify-content-center justify-content-lg-start mb-0 mr-3 mr-md-5">
-            <li class="page-item">
-              <a class="material-icons page-link h4 h3-md rounded-0 border-bottom-0 border-top-0 p-md-4 mb-0"
-                href="#">chevron_left</a>
-            </li>
-            <li class="page-item">
-              <a class="material-icons page-link h4 h3-md rounded-0 border-bottom-0 border-top-0 p-md-4 mb-0"
-                href="#">chevron_right</a>
-            </li>
-          </ul>
-          <h3 class="h5 h4-md h3-xl mb-0">Collection 001-xx</h3>
-        </nav>
-      </div>
+    </div>
+    <div class="col-lg-6 bg-dark" data-aos="fade-left" data-aos-delay="400">
+      <div class="collection__img" data-aos="fade-left" data-aos-delay="800"></div>
+      <nav class="bg-white d-flex align-items-center border-bottom">
+        <ul class="pagination justify-content-center justify-content-lg-start mb-0 mr-3 mr-md-5">
+          <li class="page-item">
+            <a class="material-icons page-link h4 h3-md rounded-0 border-bottom-0 border-top-0 p-md-4 mb-0"
+              href="#">chevron_left</a>
+          </li>
+          <li class="page-item">
+            <a class="material-icons page-link h4 h3-md rounded-0 border-bottom-0 border-top-0 p-md-4 mb-0"
+              href="#">chevron_right</a>
+          </li>
+        </ul>
+        <h3 class="h5 h4-md h3-xl mb-0">Collection 001-xx</h3>
+      </nav>
+    </div>
   </section>
 
   <section class="onegear overflow-hidden mb-4 mb-lg-0">
     <div class="row no-gutters">
       <div class="col-lg-6" data-aos="fade-right" data-aos-delay="400">
-        <div class="onegear__img position-relative">
+        <div class="onegear__img">
           <a href="#"
             class="arrow__icon material-icons btn btn-dark d-none d-lg-flex align-items-center justify-content-center">arrow_forward</a>
         </div>
@@ -101,8 +104,8 @@
       <div class="stripped__item col-lg-6 bg-lg-light d-flex flex-column flex-column-reverse justify-content-between"
         data-aos="fade-right">
         <a href="#"
-            class="readmore__btn hover-bglight-lg-left btn btn-dark h6 h4-md font-weight-bold d-flex d-lg-none align-items-center justify-content-center mb-0"
-            data-aos="fade-left" data-aos-delay="200">Read More</a>
+          class="readmore__btn hover-bglight-lg-left btn btn-dark h6 h4-md font-weight-bold d-flex d-lg-none align-items-center justify-content-center mb-0"
+          data-aos="fade-left" data-aos-delay="200">Read More</a>
         <p class="text-secondary text-left text-lg-right" data-aos="fade-left">Without
           the added parts required for a fully geared drive
           train—derailleurs,<br>shifters, cables, cable carriers, multiple chain rings, freewheel hub,
@@ -117,7 +120,7 @@
           class="arrow__icon material-icons btn btn-light d-none d-lg-flex align-items-center justify-content-center">arrow_forward</a>
       </div>
       <div class="col-lg-6" data-aos="fade-left">
-        <div class="stripped__img position-relative">
+        <div class="stripped__img">
           <a href="#"
             class="readmore__btn hover-bglight-left btn btn-dark h4 font-weight-bold d-none d-lg-flex align-items-center justify-content-center mb-0"
             data-aos="fade-left" data-aos-delay="200">Read More</a>
@@ -133,11 +136,12 @@
   </section>
 
   <section class="recommend__banner">
-      <div class="recommend__banner__text bg-white p-3">
-        <h4 class="h6 h5-md h4-xl fomt-weight-bold mb-3">“I like to ride. Fixed gear. No brakes.<br>Can’t stop. Don’t want to,
-          either.”</h4>
-        <p class="text-secondary mb-0">Premium Rush (2012)</p>
-      </div>
+    <div class="recommend__banner__text bg-white p-3">
+      <h4 class="h6 h5-md h4-xl fomt-weight-bold mb-3">“I like to ride. Fixed gear. No brakes.<br>Can’t stop. Don’t want
+        to,
+        either.”</h4>
+      <p class="text-secondary mb-0">Premium Rush (2012)</p>
+    </div>
   </section>
 
   <section class="article container">
@@ -208,7 +212,6 @@
   </script>
   <script src="./js/vendors/jquery-3.5.1.slim.min.js"></script>
   <script src="./js/vendors/bootstrap.min.js"></script>
-  <!-- <script src="./js/vendors/jquery.scrollme.min.js"></script> -->
   <script src="./js/all.js"></script>
 </body>
 
