--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- header -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top px-md-5 py-md-4"
     data-aos="fade-down">
-    <h1 class="d-flex align-items-center hover-rotatex-turn-round mb-0">
+    <h1 class="d-flex align-items-center hover-rotateX-turn-round mb-0">
       <a class="logo navbar-brand" href="./index.html">Fixie</a>
     </h1>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -92,7 +92,7 @@
           other bicycle<br>drivetrain, with the most direct power transfer from rider to the wheels. Thus,
           it<br>requires less energy in any given gear to move than a geared bike in the same gear.</p>
         <a href="#"
-          class="readmore__btn hover-bgdark-lg-left btn btn-dark btn-lg-light h6 h4-md font-weight-bold d-flex align-items-center justify-content-center mb-0"
+          class="readmore__btn hover-bgDark-lg-left btn btn-dark btn-lg-light h6 h4-md font-weight-bold d-flex align-items-center justify-content-center mb-0"
           data-aos="fade-left" data-aos-delay="400">Read More</a>
 
       </div>
@@ -104,7 +104,7 @@
       <div class="stripped__item col-lg-6 bg-lg-light d-flex flex-column flex-column-reverse justify-content-between"
         data-aos="fade-right">
         <a href="#"
-          class="readmore__btn hover-bglight-lg-left btn btn-dark h6 h4-md font-weight-bold d-flex d-lg-none align-items-center justify-content-center mb-0"
+          class="readmore__btn btn btn-dark h6 h4-md font-weight-bold d-flex d-lg-none align-items-center justify-content-center mb-0"
           data-aos="fade-left" data-aos-delay="200">Read More</a>
         <p class="text-secondary text-left text-lg-right" data-aos="fade-left">Without
           the added parts required for a fully geared drive
@@ -122,7 +122,7 @@
       <div class="col-lg-6" data-aos="fade-left">
         <div class="stripped__img">
           <a href="#"
-            class="readmore__btn hover-bglight-left btn btn-dark h4 font-weight-bold d-none d-lg-flex align-items-center justify-content-center mb-0"
+            class="readmore__btn hover-bgLight-lg-left btn btn-dark h4 font-weight-bold d-none d-lg-flex align-items-center justify-content-center mb-0"
             data-aos="fade-left" data-aos-delay="200">Read More</a>
         </div>
       </div>
