修改 loading 動畫(mobile 尺寸)

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <!-- loading -->
   <div class="loading bg-white vw-100 vh-100 fixed-top d-flex align-items-center justify-content-center">
     <div class="overflow-hidden pb-2">
-      <div class="loading__img hover-skew-right hover-underline-left mb-3"></div>
-      <p class="loading__text h3 text-center font-weight-bold"></p>
+      <div class="loading__img hover-skew-right hover-underline-left mb-2 mb-md-3"></div>
+      <p class="loading__text h5 h3-md text-center font-weight-bold"></p>
     </div>
   </div>
 
