刪除 overflowX-hidden

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <link rel="stylesheet" href="./css/all.css">
 </head>
 
-<body class="overflowX-hidden">
+<body>
   <!-- loading -->
   <div class="loading bg-white vw-100 vh-100 fixed-top d-flex align-items-center justify-content-center">
-    <div class="overflow-hidden pb-2">
+    <div class="pb-2">
       <div class="loading__img hover-skew-right hover-underline-left mb-2 mb-md-3"></div>
       <p class="loading__text h5 h3-md text-center font-weight-bold"></p>
     </div>
