設定 loading 動態停止 js

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body>
   <!-- loading -->
-  <div class="loading bg-white vw-100 vh-100 fixed-top d-flex align-items-center justify-content-center">
+  <div class="js-loading loading bg-white vw-100 vh-100 fixed-top d-flex align-items-center justify-content-center">
     <div class="pb-2">
       <div class="loading__img hover-skew-right hover-underline-left mb-2 mb-md-3"></div>
-      <p class="loading__text h5 h3-md text-center font-weight-bold"></p>
+      <p class="js-loading-text loading__text h5 h3-md text-center font-weight-bold"></p>
     </div>
   </div>
 
@@ -85,7 +85,7 @@
   <section class="onegear overflow-hidden mb-4 mb-lg-0">
     <div class="row no-gutters">
       <div class="col-lg-6" data-aos="fade-right" data-aos-delay="400">
-        <div class="onegear__img">
+        <div class="js-onegear-img onegear__img">
           <a href="#"
             class="arrow__icon material-icons btn btn-dark d-none d-lg-flex align-items-center justify-content-center">arrow_forward</a>
         </div>
@@ -94,7 +94,7 @@
         data-aos="fade-left" data-aos-delay="400">
         <div class="onegear__item__text">
           <h3 class="h4 h3-md h2-xl text-primary text-lg-right">
-            <span class="onegear__item__title d-block">One Gear,</span>
+            <span class="js-onegear-item-title onegear__item__title d-block">One Gear,</span>
             <span data-aos="fade-left">Many Variations</span>
           </h3>
         </div>
@@ -110,7 +110,7 @@
     </div>
   </section>
 
-  <section class="stripped overflow-hidden">
+  <section class="js-stripped stripped overflow-hidden">
     <div class="row no-gutters flex-column-reverse  flex-lg-row">
       <div class="stripped__item col-lg-6 bg-lg-light d-flex flex-column flex-column-reverse justify-content-between"
         data-aos="fade-right">
@@ -123,15 +123,15 @@
           brazed-on<br>mounting lugs—a fixed gear bicycle weighs less than its geared equivalent.</p>
         <div class="stripped__item__text">
           <h3 class="h4 h3-md h2-xl text-primary text-left">
-            <span class="stripped__item__title d-block">Stripped-Down</span>
-            <span class="stripped__item__title--second d-block">Performance</span>
+            <span class="js-stripped-item-title stripped__item__title d-block">Stripped-Down</span>
+            <span class="js-stripped-item-title-second stripped__item__title--second d-block">Performance</span>
           </h3>
         </div>
         <a href="#"
           class="arrow__icon material-icons btn btn-light d-none d-lg-flex align-items-center justify-content-center">arrow_forward</a>
       </div>
       <div class="col-lg-6" data-aos="fade-left">
-        <div class="stripped__img">
+        <div class="js-stripped-img stripped__img">
           <a href="#"
             class="readmore__btn hover-bgLight-lg-left btn btn-dark h4 font-weight-bold d-none d-lg-flex align-items-center justify-content-center mb-0"
             data-aos="fade-left" data-aos-delay="200">Read More</a>
