--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
     <div class="container overflow-hidden">
       <div class="row no-gutters collection__text">
         <div class="col-12 col-lg-8 col-xl-12" data-aos="fade-right" data-aos-delay="400">
-          <h2 class="h3 h1-xl text-white text-lg-primary mb-3 mb-lg-5">Single Speed,<br> Single Life.</h2>
-          <p class="d-none d-md-block text-white text-lg-secondary h4 font-weight-normal mb-5">More recently the
+          <h2 class="h3 h1-xl text-white text-lg-primary mb-3 mb-lg-4 mb-xl-5">Single Speed,<br> Single Life.</h2>
+          <p class="d-none d-md-block text-white text-lg-secondary h4 font-weight-normal mb-4 mb-xl-5">More recently the
             “fixie”
             has become a
             popular<br>alternative among mainly urban cyclists, offering the<br>advantage of simplicity compared with
             the standard<br>multi-geared bicycle.</p>
-          <a href="#" class="btn btn-outline-light btn-outline-lg-dark h6 h4-md font-weight-bold mb-0">Shop Now</a>
+          <a href="#" class="btn btn-outline-light btn-outline-lg-dark bg-lg-light h6 h4-md font-weight-bold mb-0 px-4">Shop Now</a>
         </div>
       </div>
     </div>
@@ -168,7 +168,7 @@
         <a href="#" class="card border-0" data-aos="fade-up">
           <img src="./images/img5.jpg" class="article__item__img card-img-top mt-3 mb-lg-3">
           <div class="card-body">
-            <h4 class="card-title font-italic font-weight-bold mb-2 mb-lg-3">All who cycle are my friends</h4>
+            <h4 class="card-title font-weight-bold mb-2 mb-lg-3">All who cycle are my friends</h4>
             <p class="card-text text-secondary mb-2 mb-lg-3">2020.4.27</p>
             <p class="card-text text-secondary">A rider from Stockholm interviewed for an article about the phenomenon
               notes that riding a bike imparts a feeling of freedom to the rider…</p>
@@ -179,7 +179,7 @@
         <a href="#" class="card border-0" data-aos="fade-up" data-aos-delay="200">
           <img src="./images/img6.jpg" class="article__item__img card-img-top mt-3 mb-lg-3">
           <div class="card-body">
-            <h4 class="card-title font-italic font-weight-bold mb-2 mb-lg-3">Swedish riders and enthusiasts</h4>
+            <h4 class="card-title font-weight-bold mb-2 mb-lg-3">Swedish riders and enthusiasts</h4>
             <p class="card-text text-secondary mb-2 mb-lg-3">2020.3.11</p>
             <p class="card-text text-secondary">There are also several bicycle clubs throughout Sweden with a fixed-gear
               niche. Komet Club Rouler is a club based in Gothenburg, annually arranging Svart Kat…</p>
@@ -190,7 +190,7 @@
         <a href="#" class="card border-0" data-aos="fade-up" data-aos-delay="400">
           <img src="./images/img7.jpg" class="article__item__img card-img-top mt-3 mb-lg-3">
           <div class="card-body">
-            <h4 class="card-title font-italic font-weight-bold mb-2 mb-lg-3">The Australian fixie culture</h4>
+            <h4 class="card-title font-weight-bold mb-2 mb-lg-3">The Australian fixie culture</h4>
             <p class="card-text text-secondary mb-2 mb-lg-3">2020.2.29</p>
             <p class="card-text text-secondary">Online stores in Australia ship partially-assembled bikes directly to
               consumers,considerably undercutting prices at typical brick and mortar stores…</p>
@@ -201,7 +201,7 @@
   </section>
 
   <!-- footer -->
-  <footer class="container-lg bg-light d-flex justify-content-between align-items-center px-3 py-2 px-md-5 py-md-4"
+  <footer class="container-xl bg-light d-flex justify-content-between align-items-center px-3 py-2 px-md-5 py-md-4"
     data-aos="fade-up">
     <ul class="nav d-none d-md-flex">
       <li class="nav-item pr-5">
